--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - checkout
       - tfsec/scan: 
           directory: ./infrastructure
-          exclude-checks: 'aws-ec2-require-vpc-flow-logs-for-all-vpcs,aws-ec2-enable-at-rest-encryption,aws-ec2-enforce-http-token-imds,aws-ec2-no-public-egress-sgr,aws-ec2-no-public-ingress-sgr'
+          #exclude-checks: 'aws-ec2-require-vpc-flow-logs-for-all-vpcs,aws-ec2-enable-at-rest-encryption,aws-ec2-enforce-http-token-imds,aws-ec2-no-public-egress-sgr,aws-ec2-no-public-ingress-sgr'
 
 
   terraform-init:
@@ -126,7 +126,7 @@ workflows:
         context: 
           - terraform
         requires:
-        - terraform-plan
+        # - terraform-plan
         - approve-plan
 
 
@@ -134,14 +134,14 @@ workflows:
         context: 
           - terraform
         requires:
-        - approve-plan
+        # - approve-plan
         - terraform-apply
 
 
     - approve-test:
         type: approval
         requires:
-        - approve-plan
+        # - approve-plan
         - terratest
 
 
@@ -149,7 +149,7 @@ workflows:
         context: 
           - terraform
         requires:
-        - approve-plan
+        # - approve-plan
         - approve-test
 
 
