--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,86 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
+orbs:
+  terraform: circleci/terraform@3.1
+  aws-cli: circleci/aws-cli@2.0.6
+  tfsec: mycodeself/tfsec@1.1.0
+  go: circleci/go@1.7.3
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+  tfsec:
+    parameters:
+    executor: tfsec/default
     steps:
       - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+      - tfsec/scan: 
+          directory: ./infrastructure
+          exclude-checks: 'aws-ec2-enable-at-rest-encryption,aws-ec2-enforce-http-token-imds,aws-ec2-require-vpc-flow-logs-for-all-vpcs,aws-ec2-add-description-to-security-group-rule'
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+  aws-cli-cred-setup:
+    executor: aws-cli/default
+    steps:
+      - aws-cli/setup:
+          aws-access-key-id: AWS_ACCESS_KEY
+          aws-secret-access-key: AWS_ACCESS_SECRET
+          aws-region: AWS_REGION_NAME
+  init-validate-plan:
+    executor: terraform/default
+    steps:
+      - checkout
+      - terraform/init:
+          path: infrastructure/
+      - terraform/validate:
+          path: infrastructure/
+      - terraform/plan:
+          path: infrastructure/
+    working_directory: ~/src
+  apply:
+    executor: terraform/default
+    steps:
+      - checkout
+      - terraform/apply:
+          path: infrastructure/
+    working_directory: ~/src
+  terratest:
+    executor:
+      name: go/default
+      tag: '1.18'
+    steps:
+      - checkout
+      - run: wget https://releases.hashicorp.com/terraform/1.3.5/terraform_1.3.5_linux_amd64.zip
+      - run: sudo unzip terraform_1.3.5_linux_amd64.zip -d /usr/local/bin
+      - run: cd ./infrastructure && terraform init
+      - run: go mod init "github.com/DanyaCt/webserver-ec2-module-terraform"
+      - run: go mod tidy
+      - run: go test -v
+  destroy:
+    executor: terraform/default
+    steps:
+      - checkout
+      - terraform/destroy:
+          path: infrastructure/
+    working_directory: ~/src
 workflows:
-  say-hello-workflow:
+  deploy:
     jobs:
-      - say-hello
- 
+      - tfsec
+      - aws-cli-cred-setup:
+          context: aws
+      - init-validate-plan:
+          requires:
+            - aws-cli-cred-setup
+      - hold:
+          type: approval
+          requires:
+            - init-validate-plan
+      - apply:
+          requires:
+            - hold
+      - terratest:
+          requires:
+            - apply
+      - hold2:
+          type: approval
+          requires:
+            - terratest
+      - destroy:
+          requires:
+            - hold2
