--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
-version: '2.1'
+version: 2.1
 orbs:
   terraform: circleci/terraform@3.2.1
+env:
+  AWS_ACCESS_KEY_ID: AWS_ACCESS_KEY_ID
+  AWS_SECRET_ACCESS_KEY: AWS_SECRET_ACCESS_KEY
 workflows:
   deploy_infrastructure:
     jobs:
