--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,35 +1,16 @@
 version: 2.1
 orbs:
-  terraform: circleci/terraform@3.2.1
-env:
-  AWS_ACCESS_KEY_ID: AWS_ACCESS_KEY_ID
-  AWS_SECRET_ACCESS_KEY: AWS_SECRET_ACCESS_KEY
+  aws-cli: circleci/aws-cli@2.0
+jobs:
+  aws-cli-cred-setup:
+    executor: aws-cli/default
+    steps:
+      - aws-cli/setup:
+          aws-access-key-id: AWS_ACCESS_KEY
+          aws-secret-access-key: AWS_ACCESS_SECRET
+          aws-region: AWS_REGION_NAME
 workflows:
-  deploy_infrastructure:
+  aws-cli:
     jobs:
-      - terraform/fmt:
-          checkout: true
-          context: terraform
-          path: infrastructure/
-      - terraform/validate:
-          checkout: true
-          context: terraform
-          path: infrastructure/
-          requires:
-            - terraform/fmt
-      - terraform/plan:
-          checkout: true
-          context: terraform
-          path: infrastructure/
-          persist-workspace: true
-          requires:
-            - terraform/validate
-      - terraform/apply:
-          attach-workspace: true
-          context: terraform
-          path: infrastructure/
-          filters:
-            branches:
-              only: main
-          requires:
-            - terraform/plan
+      - aws-cli-cred-setup:
+          context: aws
