--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,10 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Initialize Go module
+          command: go mod init
+          working_directory: ~/src
+      - run:
           name: Run Tests
           command: go test -v ./tests
     working_directory: ~/src
