--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,15 +44,28 @@ jobs:
     working_directory: ~/src
 
   run-tests:
-    executor: 
+    executor:
       name: go/default
       tag: '1.18'
     steps:
       - checkout
       - run:
+          name: Download and install Terraform
+          command: |
+            wget https://releases.hashicorp.com/terraform/1.3.5/terraform_1.3.5_linux_amd64.zip
+            sudo unzip terraform_1.3.5_linux_amd64.zip -d /usr/local/bin
+      - run:
+          name: Initialize Terraform
+          command: cd ./infrastructure && terraform init
+      - run:
+          name: Initialize Go module
+          command: |
+            
+            go mod tidy
+      - run:
           name: Run Tests
           command: go test -v -mod=readonly ./tests
-          working_directory: ~/src
+
 
   destroy:
     executor: terraform/default
