--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,15 +49,12 @@ jobs:
       tag: '1.18'
     steps:
       - checkout
-      - run:
-          name: Initialize Go module
-          command: go mod init github.com/VitaliySynytskyi/webserver-ec2-module-terraform
-      - run:
-          name: Run go mod tidy
-          command: go mod tidy
-      - run:
-          name: Run Tests
-          command: go test -v -mod=readonly ./tests
+      - run: wget https://releases.hashicorp.com/terraform/1.3.5/terraform_1.3.5_linux_amd64.zip
+      - run: sudo unzip terraform_1.3.5_linux_amd64.zip -d /usr/local/bin
+      - run: cd ./infrastructure && terraform init
+      - run: go mod init "github.com/DanyaCt/webserver-ec2-module-terraform"
+      - run: go mod tidy
+      - run: go test -v ./test
 
 
   destroy:
