--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,9 +52,9 @@ jobs:
       - run: wget https://releases.hashicorp.com/terraform/1.3.5/terraform_1.3.5_linux_amd64.zip
       - run: sudo unzip terraform_1.3.5_linux_amd64.zip -d /usr/local/bin
       - run: cd ./infrastructure && terraform init
-      - run: go mod init "github.com/DanyaCt/webserver-ec2-module-terraform"
+      - run: go mod init "github.com/VitaliySynytskyi/webserver-ec2-module-terraform"
       - run: go mod tidy
-      - run: go test -v ./test
+      - run: go test -v
 
 
   destroy:
