--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,7 @@ jobs:
     working_directory: ~/src
 
 workflows:
+  version: 2
   deploy:
     jobs:
       - tfsec
@@ -74,20 +75,83 @@ workflows:
           requires:
             - aws-cli-cred-setup
             - tfsec
+          filters:
+            branches:
+              only: test
       - hold-before-apply:
           type: approval
           requires:
             - init-validate-plan
+          filters:
+            branches:
+              only: test
       - apply:
           requires:
             - hold-before-apply
+          filters:
+            branches:
+              only: test
       - run-tests:
           requires:
             - apply
+          filters:
+            branches:
+              only: test
       - hold-before-destroy:
           type: approval
           requires:
             - apply
+          filters:
+            branches:
+              only: test
       - destroy:
           requires:
             - hold-before-destroy
+          filters:
+            branches:
+              only: test
+
+  deploy-prod:
+    jobs:
+      - tfsec
+      - aws-cli-cred-setup:
+          context: aws
+      - init-validate-plan:
+          requires:
+            - aws-cli-cred-setup
+            - tfsec
+          filters:
+            branches:
+              only: prod
+      - hold-before-apply:
+          type: approval
+          requires:
+            - init-validate-plan
+          filters:
+            branches:
+              only: prod
+      - apply:
+          requires:
+            - hold-before-apply
+          filters:
+            branches:
+              only: prod
+      - run-tests:
+          requires:
+            - apply
+          filters:
+            branches:
+              only: prod
+      - hold-before-destroy:
+          type: approval
+          requires:
+            - apply
+          filters:
+            branches:
+              only: prod
+      - destroy:
+          requires:
+            - hold-before-destroy
+          filters:
+            branches:
+              only: prod
