--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,8 @@ jobs:
       - terraform/plan:
           path: infrastructure/
           var: 
-            http_instance_names=$http_instance_names
-            db_instance_names=$db_instance_names
+            http_instance_names: $http_instance_names
+            db_instance_names: $db_instance_names
     working_directory: ~/src
 
   apply:
@@ -45,8 +45,8 @@ jobs:
       - terraform/apply:
           path: infrastructure/
           var: 
-            http_instance_names=$http_instance_names
-            db_instance_names=$db_instance_names
+            http_instance_names: $http_instance_names
+            db_instance_names: $db_instance_names
     working_directory: ~/src
 
   run-tests:
@@ -69,8 +69,8 @@ jobs:
       - terraform/destroy:
           path: infrastructure/
           var: 
-            http_instance_names=$http_instance_names
-            db_instance_names=$db_instance_names
+            http_instance_names: $http_instance_names
+            db_instance_names: $db_instance_names
     working_directory: ~/src
 
 workflows:
