--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,12 +31,12 @@ jobs:
           path: infrastructure/
       - terraform/validate:
           path: infrastructure/
+      - run:
+          name: "echo environment variables from org-global context"
+          command: echo $http_instance_names
       - terraform/plan:
           path: infrastructure/
-          parameters:
-            var:
-              http_instance_names: $http_instance_names
-          additional_flags: -chdir=infrastructure/
+          var: http_instance_names=$http_instance_names
     working_directory: ~/src
 
   apply:
