--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,8 @@ jobs:
           path: infrastructure/
       - terraform/plan:
           path: infrastructure/
-          environment:
-            TF_VAR_db_instance_names: http_instance_names='["test-instance-db-1", "test-instance-db-2", "test-instance-db-3"]'
+          var: 
+            http_instance_names: $http_instance_names
     working_directory: ~/src
 
   apply:
