--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
           path: infrastructure/
       - terraform/plan:
           path: infrastructure/
-          var: http_subnet=$SUBNETNAME
+          var: env=$env
     working_directory: ~/src
 
   apply:
@@ -42,7 +42,7 @@ jobs:
       - checkout
       - terraform/apply:
           path: infrastructure/
-          var: http_instance_names=$http_instance_names
+          var: env=$env
     working_directory: ~/src
 
   run-tests:
@@ -64,7 +64,7 @@ jobs:
       - checkout
       - terraform/destroy:
           path: infrastructure/
-          var: http_instance_names=$http_instance_names
+          var: env=$env
     working_directory: ~/src
 
 workflows:
