--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,14 @@ jobs:
     executor: tfsec/default
     steps:
       - checkout
+      - run: ls -R
       - tfsec/scan:
           directory: infrastructure
           exclude-checks: GEN001,GCP001,GCP002
   terraform-setup:
     executor: terraform/default
     steps:
-      - checkout
-      - run: ls -R
+      - persist_to_workspace
       - terraform/init
       - terraform/validate
       - terraform/plan
@@ -22,7 +22,7 @@ jobs:
   terraform-apply:
     executor: terraform/default
     steps:
-      - checkout
+      - attach_workspace
       - terraform/apply
     working_directory: infrastructure
   infrastructure-test:
@@ -35,7 +35,7 @@ jobs:
   terraform-destroy:
     executor: terraform/default
     steps:
-      - checkout
+      - attach_workspace
       - terraform/destroy
     working_directory: infrastructure
   
